Create basic architecture

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 .DS_Store
 npm-debug.log
+yarn-error.log
 
 _old
 _tools
@@ -21,7 +22,7 @@ webSqlApp
 dev/www/sync
 beacons
 testapps
-dist
+dist/
 dev/www/css
 upload/
 public/*
