--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vusers",
   "version": "1.0.0",
-  "description": "Vue.js Test Project",
+  "description": "Vue.js | Test Project",
   "author": "Stefan Blattmann <stefan.blattmann@gmail.com>",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.2.2",
+    "vue-resource": "^1.2.1",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
